Openapi generation 2
